<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.liweijian.quzi.MainActivity">
    <android.support.v7.widget.FitWindowsLinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

    <TextView
        android:id="@+id/question_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.FitWindowsLinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_height="wrap_content"
            android:text="@string/choosetrue"
            android:layout_width="wrap_content" />
        <Button
            android:id="@+id/false_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/choosefalse"/>

    </android.support.v7.widget.FitWindowsLinearLayout>

        <android.support.v7.widget.FitWindowsLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_button"
                android:layout_height="wrap_content"
                android:text="@string/chooseprev"
                android:layout_width="wrap_content" />
            <Button
                android:id="@+id/next_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/choosenext"/>

        </android.support.v7.widget.FitWindowsLinearLayout>

        <Button
            android:id="@+id/cheat_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cheate"/>
</android.support.v7.widget.FitWindowsLinearLayout>

</android.support.constraint.ConstraintLayout>


