<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.liweijian.quzi.CheatActivity">
    <android.support.v7.widget.FitWindowsLinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/waring_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/waring"/>

        <TextView
            android:id="@+id/answer_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/answer"/>

        <Button
            android:id="@+id/showanswer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showanswer"/>



</android.support.v7.widget.FitWindowsLinearLayout>
</android.support.constraint.ConstraintLayout>
